--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+#yellow{
+	border-radius:1px;
+	border-color:green;
+}
+#red{
+	border-radius:1px;
+	border-color:black;
+}
+#yellow{
+	border-radius:1px;
+	border-color:yellow;
+}
